# TinyShark

./: CMakeLists.txt  README.md
include/: captureDev.h  command.h
src/: captureDev.cpp  main.cpp
